Minor refactoring and updating the README.md